fix profile css spacing

--- a/client/src/Profiles/AllProfiles/profiles.css
+++ b/client/src/Profiles/AllProfiles/profiles.css
@@ -40,6 +40,7 @@
   #topleft {
     grid-area: topleft;
     max-width: 90vw;
+    margin-bottom: -70px;
     display: grid;
     justify-items: center;
     align-items: center;
@@ -131,14 +132,29 @@
   display: flex;
   justify-content: center;
 }
-#about,
-#pet-info,
-#sitter-info {
+#pet-info {
   text-align: left;
   margin: 20px auto;
   min-height: 40px;
   height: auto;
   width: 80%;
+}
+#about {
+  flex-basis: 95%;
+  margin: -50px auto 40px 5%;
+  text-align: left;
+}
+@media only screen and (min-width: 630px) {
+  #about {
+    margin: auto;
+    flex-basis: 100%;
+  }
+}
+@media only screen and (min-width: 630px) {
+  #about {
+    margin: 50px auto;
+    flex-basis: 80%;
+  }
 }
 /*CALENDAR */
 #calendar {
